docker-scripts/sonarr/sonarr.deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr
        imagePullPolicy: Always
        ports:
        - containerPort: 8989
        volumeMounts:
        - mountPath: /dev/rtc
          name: rtc
          readOnly: true
        - mountPath: /config
          name: config
        - mountPath: /scripts
          name: scripts
        - mountPath: /downloads
          name: downloads
        - mountPath: /blackhole
          name: blackhole
        - mountPath: /media/red_one/TV Shows
          name: tv-shows
        - mountPath: /red/downloads
          name: downloads
      volumes:
      - name: rtc
        hostPath:
          type: File
          path: /dev/rtc
      - name: config
        hostPath:
          type: Directory
          path: /home/docker/sonarr/config
      - name: scripts
        hostPath:
          type: Directory
          path: /home/docker/sonarr/scripts
      - name: downloads
        hostPath:
          type: Directory
          path: /red/downloads
      - name: blackhole
        hostPath:
          type: Directory
          path: /red/blackhole
      - name: tv-shows
        hostPath:
          type: Directory
          path: /red/TV Shows
