docker-scripts/sonarr/sonarr.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: sonarr
spec:
  selector:
    app: sonarr
  ports:
  - protocol: TCP
    name: http
    port: 8989
    targetPort: 8989
