docker-scripts/sonarr/sonarr.ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - www.arendse.xyz
        - sonarr.arendse.xyz
      secretName: sonarr-secret
  rules:
    - host: sonarr.arendse.xyz
      http:
        paths:
          - backend:
              serviceName: sonarr
              servicePort: 8989
    - host: www.arendse.xyz
      http:
        paths:
          - path: /sonarr
            backend:
              serviceName: sonarr
              servicePort: 8989
